tests/diagnostics/functions/invalid_call_target/expect.txt
# exit: 1
input/main.lang0:2:13: error: invalid call target
      return (1)(2)
              ^
